2010-02-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* PropertyInfo.cs: Remove a pair of MonoTODO.

	* MonoProperty.cs: Implement GetConstantValue and GetRawConstantValue.

2010-02-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoMethod.cs (GetParameters): Must return a copy instead of the interned array.

	* MonoMethod.cs (Invoke): Skip array clone in GetParameters.

	* MonoProperty.cs (GetIndexParameters): Properly handle write-only indexed properties.
	Return a ParameterInfo object bound to the properly and not to the method.

	* ParameterInfo.cs: Add new constructor that copies all fields but Member.

	* ParameterInfo.cs (MetadataToken): Properly handle tokens of non-method members.

2010-01-31  Zoltan Varga  <vargaz@gmail.com>

	* MonoGenericClass.cs: Fix a warning.

2010-01-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Assembly.cs: GetSatelliteAssembly: Ask LoadSatellite to not throw
	exceptions, since we ignore them anyway.

2010-01-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* ParameterInfo.cs (DefaultProperty): Fix small typo.

2010-01-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* ParameterInfo.cs (DefaultProperty): Add support for DateTime defaults.

	* ParameterInfo.cs: Implements RawDefaultProperty.

2009-12-17 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs (GetMethods): When the GTD is not a typebuilder,
	calling GetMethods on it will return everything we need so no need to
	do the crazy loop.
	The returned methods might contains some that are not from a generic type
	so we need to guard against this as well.

	* MonoGenericClass.cs (GetMethodsInternal): Guard against methods that don't
	belong to a GTD as well.

2009-12-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Remove IsByRef hack.

2009-12-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs (format_name): Avoid calling AssemblyQualifiedName as mcs DynamicObject
	doesn't implement it.

2009-12-12 Rodrigo Kumpera  <rkumpera@novell.com>
